[gd_scene load_steps=20 format=2]

[ext_resource path="res://actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://particles/blood/dingbats-420.png" type="Texture" id=2]
[ext_resource path="res://particles/muzzleflash/muzzle_flash_17.png" type="Texture" id=3]
[ext_resource path="res://actors/components/GunDropper.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=2]
mid_height = 3.0
radial_segments = 16

[sub_resource type="SphereMesh" id=3]
radius = 0.4
height = 0.8
radial_segments = 16
rings = 8

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.883436, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 2.0, 0, 1, Vector2( 1, 2 ), 2.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
direction = Vector3( 0, 0.5, 1 )
spread = 25.0
gravity = Vector3( 0, -9.81, 0 )
initial_velocity = 4.0
radial_accel = 1.0
angle = 20.0
angle_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0 ), 0.0, 4.53659, 0, 1, Vector2( 0.22043, 1 ), 4.53659, -1.28276, 1, 1, Vector2( 1, 0 ), -1.28276, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -0.6
scale = 4.0
scale_curve = SubResource( 12 )
color = Color( 1, 0.517647, 0.164706, 1 )

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
vertex_color_use_as_albedo = true
params_cull_mode = 2
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=15]
material = SubResource( 14 )

[node name="Enemy" type="KinematicBody" groups=[
"Enemy",
]]
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Nose" type="MeshInstance" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -0.9, -0.9 )
mesh = SubResource( 3 )
material/0 = null

[node name="Particles" type="Spatial" parent="."]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, 0 )

[node name="Spill" type="Particles" parent="Particles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 1 )
emitting = false
amount = 16
lifetime = 0.7
one_shot = true
preprocess = 0.15
explosiveness = 0.2
randomness = 0.5
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )

[node name="ImpactX" type="Particles" parent="Particles"]
transform = Transform( -4.37114e-08, 0, -1, -1, -4.37114e-08, 4.37114e-08, -4.37114e-08, 1, 0, 3.25842e-08, 0, 1.5 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 15 )

[node name="ImpactZ" type="Particles" parent="Particles"]
transform = Transform( 1, 4.37114e-08, 0, 0, 1.91069e-15, -1, -4.37114e-08, 1, 1.91069e-15, 3.25842e-08, 0, 1.5 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 15 )

[node name="GunDropper" parent="." instance=ExtResource( 4 )]
